--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@google/genai": "^1.13.0",
     "@google/generative-ai": "^0.24.1",
+    "@icons-pack/react-simple-icons": "^13.7.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -20,8 +26,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-speech-recognition": "^4.0.1",
-    "tailwind-merge": "^3.3.1"
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
